--- a/7.1_LSTM.ipynb
+++ b/7.1_LSTM.ipynb
@@ -1,1 +1,189 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"7.1_LSTM.ipynb","version":"0.3.2","provenance":[],"collapsed_sections":[]},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.6.8"},"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"}},"cells":[{"metadata":{"id":"n7vYka6lzCuY","colab_type":"code","colab":{}},"cell_type":"code","source":["import tensorflow as tf\n","from tensorflow.examples.tutorials.mnist import input_data"],"execution_count":0,"outputs":[]},{"metadata":{"id":"0RlXA1JszCub","colab_type":"code","colab":{"base_uri":"https://localhost:8080/","height":853},"outputId":"3c8e4563-8aa3-4b4f-8a3c-83966ed3454b","executionInfo":{"status":"ok","timestamp":1556369021524,"user_tz":-480,"elapsed":381541,"user":{"displayName":"蒋志碧","photoUrl":"","userId":"16736078411304620374"}}},"cell_type":"code","source":["#载入数据集\n","mnist = input_data.read_data_sets(\"MNIST_data/\",one_hot=True)\n","#输入的图片是28*28\n","n_inputs = 28 #输入一行，一行有28个数据\n","max_time = 28 #一共28行\n","lstm_size = 100 # 隐层单元\n","n_classes = 10 #10个分类\n","batch_size = 50 #每批次50个样本\n","n_batch = mnist.train.num_examples // batch_size\n","\n","#这里的none表示第一个维度可以是任意长度\n","x = tf.placeholder(tf.float32,[None,784])\n","y = tf.placeholder(tf.float32,[None,10])\n","\n","#                                   [100,10]\n","w = tf.Variable(tf.truncated_normal([lstm_size,n_classes],stddev=0.1))\n","b = tf.Variable(tf.constant(0.1,shape=[n_classes]))\n","\n","def RNN(X,W,b):\n","    #           [None,784]    [-1,28,28]\n","    inputs = tf.reshape(X,[-1,max_time,n_inputs])\n","    lstm_cell = tf.contrib.rnn.BasicLSTMCell(lstm_size) #100\n","    #                 50           100\n","    #outputs: [state, batch_size, cell.state_size]\n","    #state[0]:cell_state\n","    #state[1]:hidden_state\n","    outputs,final_state = tf.nn.dynamic_rnn(lstm_cell,inputs,dtype=tf.float32)\n","    results = tf.nn.softmax(tf.matmul(final_state[1],W)+b)\n","    return results\n","\n","prediction = RNN(x,w,b)\n","\n","cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=prediction,labels=y))\n","train_step = tf.train.AdamOptimizer(0.01).minimize(cross_entropy)\n","\n","correct_prediction = tf.equal(tf.arg_max(y,1),tf.arg_max(prediction,1))\n","\n","accuracy = tf.reduce_mean(tf.cast(correct_prediction,tf.float32))\n","\n","with tf.Session() as sess:\n","    sess.run(tf.global_variables_initializer())\n","    \n","    for epoch in range(6):\n","        for batch in range(n_batch):\n","            batch_xs,batch_ys = mnist.train.next_batch(batch_size)\n","            sess.run(train_step,feed_dict={x:batch_xs,y:batch_ys})\n","            \n","        acc = sess.run(accuracy,feed_dict={x:mnist.test.images,y:mnist.test.labels})\n","        print (\"Iter \" + str(epoch) + \", Testing Accuracy= \" + str(acc))"],"execution_count":2,"outputs":[{"output_type":"stream","text":["WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n","WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please write your own downloading logic.\n","WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please use tf.data to implement this functionality.\n","Extracting MNIST_data/train-images-idx3-ubyte.gz\n","WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please use tf.data to implement this functionality.\n","Extracting MNIST_data/train-labels-idx1-ubyte.gz\n","WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please use tf.one_hot on tensors.\n","Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n","Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n","WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n","WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Colocations handled automatically by placer.\n","WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:21: BasicLSTMCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","This class is equivalent as tf.keras.layers.LSTMCell, and will be replaced by that in Tensorflow 2.0.\n","WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:26: dynamic_rnn (from tensorflow.python.ops.rnn) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Please use `keras.layers.RNN(cell)`, which is equivalent to this API\n","WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:32: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","\n","Future major versions of TensorFlow will allow gradients to flow\n","into the labels input on backprop by default.\n","\n","See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n","\n","WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:35: arg_max (from tensorflow.python.ops.gen_math_ops) is deprecated and will be removed in a future version.\n","Instructions for updating:\n","Use `tf.math.argmax` instead\n","Iter 0, Testing Accuracy= 0.8893\n","Iter 1, Testing Accuracy= 0.9233\n","Iter 2, Testing Accuracy= 0.9248\n","Iter 3, Testing Accuracy= 0.9391\n","Iter 4, Testing Accuracy= 0.8855\n","Iter 5, Testing Accuracy= 0.9103\n"],"name":"stdout"}]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "n7vYka6lzCuY"
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.examples.tutorials.mnist import input_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 853
+    },
+    "colab_type": "code",
+    "executionInfo": {
+     "elapsed": 381541,
+     "status": "ok",
+     "timestamp": 1556369021524,
+     "user": {
+      "displayName": "蒋志碧",
+      "photoUrl": "",
+      "userId": "16736078411304620374"
+     },
+     "user_tz": -480
+    },
+    "id": "0RlXA1JszCub",
+    "outputId": "3c8e4563-8aa3-4b4f-8a3c-83966ed3454b"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:21: BasicLSTMCell.__init__ (from tensorflow.python.ops.rnn_cell_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This class is equivalent as tf.keras.layers.LSTMCell, and will be replaced by that in Tensorflow 2.0.\n",
+      "WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:26: dynamic_rnn (from tensorflow.python.ops.rnn) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `keras.layers.RNN(cell)`, which is equivalent to this API\n",
+      "WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:32: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
+      "\n",
+      "WARNING:tensorflow:From <ipython-input-2-c99f0ffb7111>:35: arg_max (from tensorflow.python.ops.gen_math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.math.argmax` instead\n",
+      "Iter 0, Testing Accuracy= 0.8893\n",
+      "Iter 1, Testing Accuracy= 0.9233\n",
+      "Iter 2, Testing Accuracy= 0.9248\n",
+      "Iter 3, Testing Accuracy= 0.9391\n",
+      "Iter 4, Testing Accuracy= 0.8855\n",
+      "Iter 5, Testing Accuracy= 0.9103\n"
+     ]
+    }
+   ],
+   "source": [
+    "#载入数据集\n",
+    "mnist = input_data.read_data_sets(\"MNIST_data/\",one_hot=True)\n",
+    "#输入的图片是28*28\n",
+    "n_inputs = 28 #输入一行，一行有28个数据\n",
+    "max_time = 28 #一共28行\n",
+    "lstm_size = 100 # 隐层单元\n",
+    "n_classes = 10 #10个分类\n",
+    "batch_size = 50 #每批次50个样本\n",
+    "n_batch = mnist.train.num_examples // batch_size\n",
+    "\n",
+    "#这里的none表示第一个维度可以是任意长度\n",
+    "x = tf.placeholder(tf.float32,[None,784])\n",
+    "y = tf.placeholder(tf.float32,[None,10])\n",
+    "\n",
+    "#                                   [100,10]\n",
+    "w = tf.Variable(tf.truncated_normal([lstm_size,n_classes],stddev=0.1))\n",
+    "b = tf.Variable(tf.constant(0.1,shape=[n_classes]))\n",
+    "\n",
+    "def RNN(X,W,b):\n",
+    "    #           [None,784]    [-1,28,28]\n",
+    "    inputs = tf.reshape(X,[-1,max_time,n_inputs])\n",
+    "    lstm_cell = tf.contrib.rnn.BasicLSTMCell(lstm_size) #100\n",
+    "    #                 50           100\n",
+    "    #outputs: [state, batch_size, cell.state_size]\n",
+    "    #state[0]:cell_state\n",
+    "    #state[1]:hidden_state\n",
+    "    outputs,final_state = tf.nn.dynamic_rnn(lstm_cell,inputs,dtype=tf.float32)\n",
+    "    results = tf.nn.softmax(tf.matmul(final_state[1],W)+b)\n",
+    "    return results\n",
+    "\n",
+    "prediction = RNN(x,w,b)\n",
+    "\n",
+    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=prediction,labels=y))\n",
+    "train_step = tf.train.AdamOptimizer(0.01).minimize(cross_entropy)\n",
+    "\n",
+    "correct_prediction = tf.equal(tf.arg_max(y,1),tf.arg_max(prediction,1))\n",
+    "\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction,tf.float32))\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    \n",
+    "    for epoch in range(6):\n",
+    "        for batch in range(n_batch):\n",
+    "            batch_xs,batch_ys = mnist.train.next_batch(batch_size)\n",
+    "            sess.run(train_step,feed_dict={x:batch_xs,y:batch_ys})\n",
+    "            \n",
+    "        acc = sess.run(accuracy,feed_dict={x:mnist.test.images,y:mnist.test.labels})\n",
+    "        print (\"Iter \" + str(epoch) + \", Testing Accuracy= \" + str(acc))"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "7.1_LSTM.ipynb",
+   "provenance": [],
+   "version": "0.3.2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
